--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+
+body{
+    width: auto;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    height: 100vh;
+    
+    background-image:linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)), url(./assets/R.jpeg);
+    background-size:cover;
+    /* background-position: center; */
+    background-repeat: no-repeat;
+    
+    /* aspect-ratio: 1; */
+    
+    
+}
